<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Bank</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="cd">its an icon</string>
    <string name="to">To</string>
    <string name="To">TO:</string>
    <string name="_0_inr">0 INR</string>
    <string name="name">Name</string>
    <string name="loading">Loading ...</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="currency">INR</string>
    <string name="zero">0</string>
    <string name="transactions">Transactions</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_coupon_code_optional">Enter Coupon Code (Optional)</string>
    <string name="enter_your_email_id">Enter Your Email ID</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="signout">Sign out</string>
    <string name="name_tag">Name:</string>
    <string name="enter_amount_inr">Enter Amount(INR)</string>
    <string name="pass_bullet">• • • • • • • • • • • • •</string>
    <string name="disclaimer">Note: No data is being shared with any third party module.\nUser\'s data is end to end encrypted.</string>
    <string name="developer_email">Shubhamvirdic3@gmail.com</string>
    <string name="developer_name">Shubam Virdi</string>
    <string name="enter_amount1">Enter Amount</string>
</resources>
