<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp"

    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="4dp">

        <ImageView
            android:id="@+id/notify_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/cd"
            android:padding="4dp"
            android:src="@drawable/load" />

        <TextView
            android:id="@+id/notify_name"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:padding="2dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:fontFamily="cursive"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/notify_amount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:gravity="end"
            android:padding="2dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            tools:text="@string/zero" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="84dp"
            android:layout_marginLeft="84dp"
            android:layout_marginTop="38dp"
            android:text="@string/transaction_id"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/notify_trans_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="164dp"
            android:layout_marginLeft="164dp"
            android:layout_marginTop="38dp"
            android:text="@string/loading"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/INR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:gravity="end"
            android:padding="2dp"
            android:text="@string/currency"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/from_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="2dp"
            android:gravity="end"
            android:padding="2dp"
            android:text="To:" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>