<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.Profile">


    <Button
        android:id="@+id/signout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/corner"
        android:text="@string/signout"
        app:backgroundTint="@color/colorPrimary"
        android:layout_below="@id/name_profile"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/overpass_semibold"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/user" />

    <TextView
        android:id="@+id/name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/overpass_semibold"
        android:gravity="center"
        android:text="Name"
        android:textColor="#000"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/verified"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/dp"
        android:layout_alignRight="@+id/dp"
        android:layout_alignBottom="@+id/dp"
        android:elevation="10dp"
        android:src="@drawable/verified" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:fontFamily="@font/overpass_semibold"
        android:text="@string/disclaimer"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="80dp"
        >
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            >

            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Made with"
                android:fontFamily="@font/ubuntu"
                android:paddingRight="5dp"
                android:layout_column="1"/>
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_column="2"
                android:layout_marginTop="-5dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"

                android:src="@drawable/love"
                android:contentDescription="@string/cd" />


            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="in India"
                android:fontFamily="@font/ubuntu"
                android:paddingLeft="5dp"
                android:layout_column="3"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/ubuntu"
        android:text="By Shubam Virdi"
        android:textSize="12sp" />



</RelativeLayout>